--- a/main.html
+++ b/main.html
@@ -8,6 +8,65 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>Roll numbers</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>A</td>
+			</tr>
+
+			<tr>
+				<td>2</td>
+				<td>B</td>
+			</tr>
+
+			<tr>
+				<td>3</td>
+				<td>C</td>
+			</tr>
+
+			<tr>
+				<td>4</td>
+				<td>D</td>
+			</tr>
+
+			<tr>
+				<td>5</td>
+				<td>E</td>
+			</tr>
+
+			<tr>
+				<td>6</td>
+				<td>F</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<h2>List of medias</h2>
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="Water Droplets">
+		</li>
+		
+		<li>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			</video>
+		</li>
+		
+		<li>
+			<audio controls>
+				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+			</audio>
+		</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
