--- a/main.html
+++ b/main.html
@@ -51,17 +51,17 @@
 
 	<h2>List of medias</h2>
 	<ol>
-		<li>
-			<img src="https://picsum.photos/id/123/200/300" alt="Water Droplets">
+		<li>  First Item
+			<img src="https://picsum.photos/id/123/200/300" alt="Water Droplets" width="50" height="50">
 		</li>
 		
-		<li>
-			<video width="600" height="300" controls>
+		<li> Second Item
+			<video width="200" height="150" controls>
 				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" >
 			</video>
 		</li>
 		
-		<li>
+		<li> Third Item
 			<audio controls>
 				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mp3">
 			</audio>
